@@ -1,3 +1,12 @@
+Wed Aug 27 17:30:41 UTC 2014  Byron Harris  <harrisb@ociweb.com>
+
+        * tests/DCPS/MultiRepoTest/TestConfig.h:
+        * tests/DCPS/MultiRepoTest/TestConfig.cpp:
+
+          Undo changes from commit "Wed Aug 27 14:18:17 UTC 2014"
+          as this resulted in checking if an unsigned value is less
+          than 0, which is always false.
+
 Wed Aug 27 16:57:49 UTC 2014  Byron Harris  <harrisb@ociweb.com>
 
         * performance-tests/DCPS/SimpleLatency/sample_pub.cpp:
